# trackdechets-data

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  pyproject.toml
.cursor/: create_favro_ticket.mdc  create_table_documentation.mdc
.github/: pull_request_template.md
.github/workflows/: deploy-to-prod.yml  deploy-to-sandbox.yml  tests_secrets.yml  validate-environments-secrets.yml
airflow/: .env.dist  Dockerfile  README.md  docker-compose.yaml  requirements.txt
clickhouse/: .env.dist  README.md  docker-compose.yml
clickhouse/config.d/: config.xml
clickhouse/users.d/: default-user.xml
dbt/: .env.dist  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  lint.sh
dbt/macros/: create_bordereaux_counts.sql  create_bordereaux_enriched_query.sql  create_bsff_counts.sql  create_indexes_for_source.sql  create_laposte_enriched_statement.sql  create_sirene_etabs_enriched_statement.sql  dangerous_waste_filter.sql  get_address_column_from_stock_etablissement.sql  get_company_name_column_from_stock_etablissement.sql  get_non_final_status_bordereaux.sql
dbt/profiles/: .user.yml  profiles.yml
dbt/seeds/: _codes_dechets.yml  _matching_td_georisques.yml  _naf_2008.yml  _referentiel_codes_operation_rubriques.yml  _schema.yml  codes_operations_traitements.csv  laposte_hexasmal.csv  naf_2008.csv  referentiel_codes_operation_rubriques.csv  (+2 more)
dlt/: zammad_pipeline.py
metabase/: .env.dist  Caddyfile  README.md  docker-compose.yml
profiles/: profiles.yml
scripts/: el_gerep_pg_dwh_to_ch.sql  el_rndts_pg_dwh_to_ch.sql
trackdechets_elt/: dbt_project.yml
(+526 files in other folders)
