[project]
name = "trackdechets-elt"
version = "0.1.0"
description = "Data pipelines for Trackdechets project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.8.7",
    "clickhouse-sqlalchemy>=0.2.9",
    "dbt-clickhouse>=1.8.9",
    "dbt-core>=1.8.9",
    "dbt-osmosis>=1.1.13",
    "dlt[cli,clickhouse]>=1.7.0",
    "enlighten>=1.13.0",
    "fastexcel>=0.12.1",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "psycopg[binary,pool]>=3.2.4",
    "sqlalchemy>=2.0",
    "sqlfluff-templater-dbt>=3.2.5",
    "sqlfluff>=3.2.5",
]
